<resources>
    <string name="app_name">Ecomm Demo App</string>
    <string name="title_home">Home</string>
    <string name="title_publisher">Publisher</string>
    <string name="title_cart">Cart</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Send Notifications</string>
    <string name="title_emails">Share links</string>
    <string name="title_ids">Ids</string>
    <string name="title_login">Login</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_notifications">Send Notifications</string>
    <string name="clear_data">Clear data</string>
    <string name="consent_management">Consent Management</string>
    <string name="mode">Day</string>
    <string name="send_notification">Send notification</string>
    <string name="send_email">Share links</string>
    <string name="send_ids">Ids</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="utiq_consent_management">Manage Utiq</string>
</resources>