<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:text="@string/menu_login"
        android:textAlignment="textStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout"
        android:textAlignment="textStart"
        android:textColor="@color/orange" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/consent_management"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:text="@string/consent_management"
        android:textAlignment="textStart" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/stub_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="STUB MODE"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notifications"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:text="@string/menu_notifications"
        android:textAlignment="textStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_data"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"
        android:textAlignment="textStart"
        android:textColor="@color/orange" />

</LinearLayout>